--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "atom-templatebuilder-tools",
   "author": "Adam Freeman <shavenyaknz@gmail.com>",
   "version": "0.1.0",
-  "description": "Suite of tools to att tEmplate Builder support in Atom",
+  "description": "Suite of tools to add Template Builder support in Atom",
   "engines": {
     "atom": "*"
   },
